@@ -1069,8 +1069,8 @@ country_event = {
 		log = "[GetDateText]: [This.GetName]: italy_md.9.o1 executed"
 		add_resource = { #Egyptian Coast on the Red Sea
 			type = oil
-			amount = 4
-			state = 208
+			amount = 16
+			state = 219
 		}
 		add_opinion_modifier = {
 			target = ITA
@@ -1080,6 +1080,9 @@ country_event = {
 		set_temp_variable = { party_popularity_increase = 0.025 }
 		set_temp_variable = { temp_outlook_increase = 0.025 }
 		add_relative_party_popularity = yes
+		set_temp_variable = { tag_index = ITA.id }
+		set_temp_variable = { influence_target = THIS.id }
+		change_influence_percentage = yes
 		ITA = { country_event = italy_md.8 }
 	}
 	option = {
@@ -1088,8 +1091,10 @@ country_event = {
 		add_resource = { #Egyptian Coast on the Red Sea
 			type = oil
 			amount = 8
-			state = 208
+			state = 219
 		}
+		set_temp_variable = { percent_change = 4 }
+		change_domestic_influence_percentage = yes
 		ITA = { country_event = italy_md.10 }
 	}
 }
