@@ -118,31 +118,31 @@
  group_headquarters_title: "Headquarters"
 
  mech_inf_hq: "Mechanized Infantry Headquarters"
- mech_inf_hq_desc: "Headquarters element for mechanized infantry"
+ mech_inf_hq_desc: "Headquarters element for mechanized infantry.\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  arm_inf_hq: "Armored Infantry Headquarters"
- arm_inf_hq_desc: "Headquarters element for armored infantry"
+ arm_inf_hq_desc: "Headquarters element for armored infantry\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  lt_tank_hq: "Light Tank Headquarters"
- lt_tank_hq_desc: "Headquarters element for light tanks"
+ lt_tank_hq_desc: "Headquarters element for light tanks\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  arm_hq: "Main Battle Tank Headquarters"
- arm_hq_desc: "Headquarters element for main battle tanks"
+ arm_hq_desc: "Headquarters element for main battle tanks\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  spaa_hq: "SPAA Headquarters"
- spaa_hq_desc: "Headquarters element for SPAA"
+ spaa_hq_desc: "Headquarters element for SPAA\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  spg_inf_hq: "SPG Headquarters"
- spg_inf_hq_desc: "Headquarters element for SPGs"
+ spg_inf_hq_desc: "Headquarters element for SPGs\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  mlrs_hq: "MLRS Headquarters"
- mlsr_hq_desc: "Headquarters element for MLRS"
+ mlsr_hq_desc: "Headquarters element for MLRS\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  atk_helo_hq: "Attack Helicopter Headquarters"
- atk_helo_hq_desc: "Headquarters element for Attack Helicopters"
+ atk_helo_hq_desc: "Headquarters element for Attack Helicopters\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  med_trans_helo_hq: "Transport Helicopter Headquarters"
- med_trans_helo_hq_desc: "Headquarters element for Transport Helicopters"
+ med_trans_helo_hq_desc: "Headquarters element for Transport Helicopters\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
 
  heavy_trans_helo_hq: "Heavy Transport Helicopter Headquarters"
- heavy_trans_helo_hq_desc: "Headquarters element for Heavy Transport Helicopters"
+ heavy_trans_helo_hq_desc: "Headquarters element for Heavy Transport Helicopters\n\n§RNOTE: DO NOT USE THIS UNIT. IT IS ONLY USED TO FACILITATE THE UNIFIED DESIGNER.§!"
