@@ -6,6 +6,7 @@ v1.12.2
   - Fixed a bug where NATO members were unable to reject the SHORAD project proposal from the United States
   - Fixed a bug where France "Stage" focuses were not properly checking for their respective regions
   - Removed a bugged event that was causing other nations get an idea that is meant for Armenia/Georgia
+  - Fixed an issue where Italy would send an event to Egypt that had an improperly targeted state for the oil deal adding oil to Argentina instead of Egypt
 
  Content:
 
